--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ Django==3.2.7
 gunicorn==20.1.0
 Markdown==3.3.4
 Pillow==8.3.2
+psycopg2==2.9.1
 python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.2
 whitenoise==5.3.0
+wincertstore==0.2
